Fix for cards alignments on mobile

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ header .logo {
   width: 370px;
   height: 340px;
   padding: 40px;
-  margin-right: 30px;
   margin-bottom: 30px;
   background-color: white;
   display: flex;
@@ -203,6 +202,10 @@ footer {
   .cards-container {
     flex-wrap: nowrap;
     flex-direction: row;
+  }
+
+  .card {
+    margin-right: 30px;
   }
 
   .promotion-icon {
